# rust-bot

./: .gitignore  Cargo.toml  README.md  misc.md  run_dev.sh  run_prod.sh  todos.md
migrations/: 20240625201718_create_db.down.sql  20240625201718_create_db.up.sql  20240625210250_add_dummy_columns.down.sql  20240625210250_add_dummy_columns.up.sql  20240626203700_set_up_initial_trade_tracking.down.sql  20240626203700_set_up_initial_trade_tracking.up.sql
src/: lib.rs  main.rs
src/calculation/: mod.rs
src/calculation/indicators/: atr.rs  calculation_mode.rs  mod.rs  rsi.rs  sma.rs
src/data/: mod.rs
src/data_sources/: api_response.rs  datasource.rs  local.rs  mod.rs
src/indicators/: atr.rs  bbw.rs  bbwp.rs  bollinger_bands.rs  dynamic_pivots.rs  ema.rs  indicator.rs  indicator_args.rs  indicator_type.rs  is_indicator.rs  mod.rs  pmar.rs  pmarp.rs  populates_candles.rs  rsi.rs  sma.rs  stochastic.rs
src/lib/: timeseries.rs
src/models/: active_trade.rs  calculation_mode.rs  candle.rs  candle_added_payload.rs  interval.rs  ma_type.rs  mod.rs  net_version.rs  setup.rs  strategy.rs  strategy_orientation.rs  timeseries.rs  timeseries_builder.rs  trade.rs  trade_builder.rs  wallet.rs  wallet_builder.rs
src/notifications/: email.rs  mod.rs  notification_center.rs
src/resolution_strategies/: atr_resolution.rs  dynamic_pivot.rs  dynamic_pivots.rs  fixed_values.rs  instant_resolution.rs  is_resolution_strategy.rs  mod.rs  percentage.rs  pmarp_or_bbwp_vs_percentage.rs  pmarp_vs_percentage.rs  resolution_strategy.rs
src/strategy_testing/: mod.rs  strategy_test_result.rs  strategy_test_result_builder.rs  strategy_tester.rs  test_result.rs
src/trading_strategies/: jb_1.rs  jb_2.rs  mod.rs  rsi_basic.rs  setup.rs  silver_cross.rs  strategy.rs  strategy_orientation.rs
src/utils/: calculation_mode.rs  constants.rs  math.rs  mod.rs  sandbox.rs  string.rs  timeseries.rs
(+85 files in other folders)
