[package]
name    = "rust_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv         = "1.2.2"
dotenv      = "0.15.0"
lettre      = "0.10"
serde_json  = "1"
chrono      = { version = "0.4.26",     features = ["serde"] }
reqwest     = { version =" 0.11.18",    features = ["json"] }
serde       = { version ="1",           features = ["derive"] }
tokio       = { version = "1",          features = ["full"] }
